# web-rwkv-ffi

./: Cargo.toml  README.md
assets/: test.cpp  web_rwkv_ffi.h
examples/: test.rs
include/: web_rwkv_ffi.h
src/: lib.rs  ops.rs
test/: test.cpp
