[package]
edition = "2021"
name = "web-rwkv-ffi"
version = "0.1.2"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
anyhow = "1.0"
cbor4ii = { version = "1.0.0", features = ["serde1"] }
fastrand = "2.3"
half = { version = "2.2", features = ["bytemuck", "serde"] }
itertools = "0.14"
log = "0.4"
memmap2 = "0.9"
safetensors = "0.5"
serde = { version = "1", features = ["derive"] }
simple_logger = { version = "5.0.0", features = ["stderr"] }
sysinfo = "0.29"
tokio = { version = "1.41", features = ["full"] }
web-rwkv = "0.10.12"

[dev-dependencies]
anyhow = "1.0"
simple_logger = { version = "5.0.0", features = ["stderr"] }
sysinfo = "0.29"
